# smart-monitor

./: .gitignore  .prompt  BUILD_PROGRESS_REPORT.md  CLEANUP_REPORT.md  CMakeLists.txt  CMakeLists_backup.txt  CMakeLists_new.txt  CMakeLists_simple.txt  CMakeLists_updated.txt  CONTINUATION_REPORT.md  FINAL_SUCCESS_REPORT.md  README.md  REFACTORING_PROGRESS_REPORT.md  RESTRUCTURE_PLAN.md  TEST_REPORT.md  TYPE_REFACTORING_REPORT.md  control_server.py  test_video_analysis.py
.docs/: prompt
config/: smartmonitor.conf
config/docker/: docker-compose.yml
docker/: Dockerfile
docs/: README.md  index.html  mermaid-height-util.js
firmware/c_core/: CMakeLists.txt  CMakeLists.txt.bak  main.c  main_new.c  web_interface.html  web_interface_enhanced.html
firmware/c_core/agent/: data_agent.c  data_agent.h  симуляция
firmware/c_core/audio/: audio_capture.c  audio_capture.h  noise_detection.c  noise_detection.h
firmware/c_core/common/: smart_monitor_protocol.c
firmware/c_core/esp32/: esp32_device.c
firmware/c_core/ffi/: rust_bridge.c  rust_bridge.h
firmware/c_core/net/: charts.js  http_server.c  http_server.h  webrtc_server.h
firmware/c_core/scripts/: charts.js
firmware/c_core/sensors/: i2c_sensor.c  i2c_sensor.h  spi_device.c  spi_device.h
firmware/c_core/styles/: main.css
firmware/c_core/video/: gstreamer_pipeline.h  v4l2_capture.c  v4l2_capture.h
firmware/cpp_core/: CMakeLists.txt  main.cpp
firmware/cpp_core/ffi/: rust_bridge.cpp  rust_bridge.hpp
firmware/cpp_core/net/: http_server.cpp  http_server.hpp  webrtc_server.cpp  webrtc_server.hpp
firmware/cpp_core/tests/: test_http_server.cpp  test_integration.cpp  test_rust_bridge.cpp  test_v4l2_capture.cpp
firmware/cpp_core/video/: gstreamer_pipeline.cpp  gstreamer_pipeline.hpp  v4l2_capture.cpp  v4l2_capture.hpp
firmware/rust_modules/motion/: Cargo.toml
firmware/rust_modules/motion/src/: lib.rs
linux/configs/: smart-monitor.conf
linux/systemd/: smart-monitor.service
scripts/: TESTING.md  build_c.sh  cleanup_test_env.sh  generate_test_video.sh  run_demo.sh  run_tests.sh  setup_rtsp_server.sh  setup_virtual_camera.sh
scripts/deploy/: run_demo.sh
scripts/test/: run_tests_new.sh  test_motion_detection.sh
src/core/: CMakeLists.txt  CMakeLists_simple.txt  main.c
src/core/agent/: data_agent.c  data_agent.h  data_agent_broken.c  data_agent_en.h  симуляция
src/core/audio/: audio_capture.c  audio_capture.h  noise_detection.c  noise_detection.h
src/core/common/: globals.c  globals.h  smart_monitor_constants.h  smart_monitor_protocol.c  smart_monitor_protocol.h  types.h
src/core/communication/: uart_interface.c  uart_interface.h
src/core/ffi/: CMakeLists.txt  rust_bridge.c  rust_bridge.h  rust_bridge_mock.c
src/core/hardware/: esp32_device.c  esp32_device.h
src/core/sensors/: i2c_sensor.h  spi_device.h
src/core/video/: CMakeLists.txt  gstreamer_pipeline.c  gstreamer_pipeline.h  v4l2_capture.c  v4l2_capture.h
src/rust/: Cargo.toml  lib.rs  types.rs
src/rust/motion/src/: lib.rs
src/web/: CMakeLists.txt
src/web/api/: CMakeLists.txt  http_server.c  http_server.h
src/web/protocol/: CMakeLists.txt  protocol_server.c  protocol_server.h
src/web/webrtc/: CMakeLists.txt
systemd/: smartmonitor.service
tests/: CMakeLists.txt
tests/fixtures/: test_fixtures.cpp  test_fixtures.h
tests/integration/: test_system_integration.cpp
tests/unit/: test_audio_capture.cpp  test_basic.cpp  test_data_agent.cpp  test_i2c_sensor.cpp  test_sanity.cpp  test_semantic_types.cpp  test_types_integration.cpp
web/: http_server.c  http_server.h  protocol_server.h  webrtc_server.c
web/dashboard/: index.html
web/scripts/: app.js  video_renderer.js
web/static/: dashboard.html  main.css
web/static/css/: main.css
yocto/meta-smartmonitor/recipes-smartmonitor/smartmonitor/: smartmonitor_1.0.0.bb  smartmonitor_1.0.0.bbappend
